<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>cn.zhangchuangla</groupId>
      <artifactId>echo-pro</artifactId>
        <version>1.0.0</version>
    </parent>

    <artifactId>chuang-system</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- 添加子模块 -->
    <modules>
        <module>chuang-system-core</module>
        <module>chuang-system-storage</module>
        <module>chuang-system-message</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>cn.zhangchuangla</groupId>
            <artifactId>chuang-common-core</artifactId>
        </dependency>
        <dependency>
            <groupId>cn.zhangchuangla</groupId>
            <artifactId>chuang-common-redis</artifactId>
        </dependency>
    </dependencies>
</project>
